--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://cdn.brandfetch.io/protiviti.com/fallback/404/w/400/h/400?c=1ida8znLk-bj3-Mkg92" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Provititi's Senior Leadership Program</title>
   </head>
   <body>
     <div id="root"></div>
