fix: correct typo in page title (Provititi → Protiviti)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="https://cdn.brandfetch.io/protiviti.com/fallback/404/w/400/h/400?c=1ida8znLk-bj3-Mkg92" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Provititi's Senior Leadership Program</title>
+    <title>Protiviti's Senior Leadership Program</title>
   </head>
   <body>
     <div id="root"></div>
